# nomad-parser-vasp

./: .cruft.json  404.html  README.md  index.html  mkdocs.yml  move_template_files.sh  pyproject.toml
.github/workflows/: actions.yml
docs/: index.md
explanation/: explanation.html
how_to/: contribute_to_the_documentation.html  contribute_to_this_plugin.html  install_this_plugin.html  use_this_plugin.html
reference/: references.html
search/: search_index.json
src/nomad_parser_vasp/: __init__.py
src/nomad_parser_vasp/parsers/: __init__.py  myparser.py  outcar_parser.py  parser.py  vasp_parser.py  xml_parser.py  xml_parser_all_solutions.py
src/nomad_parser_vasp/schema_packages/: __init__.py  mypackage.py  schema_package.py  vasp_package.py  vasp_package_extended.py  vasp_schema.py
tests/: parser_test.ipynb  test_parse.ipynb  test_parser.py
tests/data/: test.archive.yaml
tests/parsers/: test_parser.py
tutorial/: tutorial.html
